# ax-xhs-cli

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: axcli.rs  main.rs  mouse.rs  output.rs  parser.rs  session.rs
src/commands/: actions.rs  feeds.rs  inspect.rs  login.rs  mod.rs  notification.rs  open.rs  search.rs  search_user.rs  session_cmd.rs  user_profile.rs
tests/cases/: 01_session_lifecycle.md  02_login.md  03_search.md  04_note_and_comments.md  05_user_profile.md  06_feeds.md  07_like_favorite.md  08_pagination.md  09_edge_cases.md  10_notification.md  11_scene_params.md  12_search_user.md  README.md
