[package]
name = "ax-xhs-cli"
version = "0.1.3"
edition = "2024"
description = "Xiaohongshu automation CLI via macOS Accessibility API"
license = "MIT"
repository = "https://github.com/cadl/ax-xhs-cli"
exclude = ["CLAUDE.md", "tests/"]

[dependencies]
anyhow = "1.0.102"
axcli-lib = { package = "axcli", version = "0.1.0" }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
core-graphics = "0.25.0"
core-graphics-types = "0.2.0"
dirs = "6.0.0"
objc2-core-foundation = "0.3.2"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
uuid = { version = "1.23.0", features = ["v4"] }
